# admin_panel

./: .dockerignore  .flake8  Dockerfile  Dockerfile-ETL  README.md  docker-compose.yaml  pyproject.toml
movies_admin/: README.md
movies_admin/config/: .env.example  settings.py  urls.py
movies_admin/config/components/: database.py
movies_admin/movies/: admin.py  mixins.py  models.py
movies_admin/movies/api/v1/: mixins.py  views.py
movies_admin/movies/locale/en/LC_MESSAGES/: django.po
movies_admin/movies/migrations/: 0001_initial.py
movies_admin/nginx/: nginx.conf
postgres_to_es/: README.md  configuration.py  dataclass_for_trans.py  elasticsearch_worker.py  genres_schema.json  load_data_to_es.py  load_genres_to_es.py  load_movies_to_es.py  load_persons_to_es.py  load_psql_to_es.py  movies_schema.json  persons_schema.json  postgres_extract.py  save_to_es.py  state.py  state_etl.py  tranform_data.py
postgres_to_es/data_from_postgres/: extract.py
postgres_to_es/genres/: dataclass_for_trans.py  load_psql_to_es.py  postgres_extract.py
postgres_to_es/movies/: dataclass_for_trans.py  load_psql_to_es.py  postgres_extract.py
postgres_to_es/persons/: dataclass_for_trans.py  load_psql_to_es.py  postgres_extract.py
postgres_to_es/schema_es/: create_schema.py
postgres_to_es/transform/: transform_data.py
schema_design/: README.md  movies_database.ddl
sqlite_to_postgres/: README.md  dataclasses_for_db.py  load_data.py  loader_and_saver.py  utils_sql.py
sqlite_to_postgres/tests/check_consistency/: test_consistency.py
(+1 files in other folders)
